--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "vuex": "^4.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.16",
+    "@babel/core": "^7.18.6",
     "@babel/eslint-parser": "^7.12.16",
     "@iconify-json/ep": "^1.1.5",
     "@vitejs/plugin-vue": "^2.3.3",
@@ -50,7 +50,7 @@
     "unplugin-auto-import": "^0.8.8",
     "unplugin-icons": "^0.14.3",
     "unplugin-vue-components": "^0.19.6",
-    "vite": "^3.0.0-alpha.11",
+    "vite": "^3.0.0-beta.4",
     "vite-plugin-components": "^0.13.3",
     "vite-plugin-inspect": "^0.5.0",
     "vite-plugin-style-import": "^2.0.0"
