--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "unplugin-icons": "^0.14.3",
     "unplugin-vue-components": "^0.19.6",
     "vite": "^3.0.0-beta.4",
+    "vite-plugin-cdn-import": "^0.3.5",
     "vite-plugin-components": "^0.13.3",
     "vite-plugin-inspect": "^0.5.0",
     "vite-plugin-style-import": "^2.0.0"
